# CONTEXT_AND_NO-CONTEXT_AGENT

./: .gitignore  CLAUDE.md  README.md
context_agent/: .gitignore  benchmark.py  main.py  pyproject.toml
context_agent/context_agent/: __init__.py  agent.py  app.py  memory_service.py  tools.py  tracing.py
context_agent/data/: memories.json
no_context_agent/: benchmark.py  main.py  pyproject.toml
no_context_agent/no_context_agent/: __init__.py  agent.py  tracing.py
